--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -33,6 +33,5 @@
   flex-direction: column;
   align-items: center;
   padding: 80px 0;
-  min-height: 800px;
   background-color: $background-offwhite;
 }
